Preprocessed survey data and added to participants_data_final.csv

--- a/preprocessing heartrate data.ipynb
+++ b/preprocessing heartrate data.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "99302c38-8613-4650-af0a-8e119165921d",
+   "metadata": {},
+   "source": [
+    "# Part 1: Preprocessing the heartrate data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7a2bebaa-1559-4797-8156-8d30c9c6fd61",
@@ -205,12 +213,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_20692/3379458404.py:15: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_39727/3379458404.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  before['HR (bpm)'].fillna(average_heart_rate_before, inplace=True)\n",
-      "/tmp/ipykernel_20692/3379458404.py:16: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_39727/3379458404.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -358,13 +366,133 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_participants_data_with_heartrate_data.to_csv('raw_participants_data_with_heartrate_data.csv')"
+    "# raw_participants_data_with_heartrate_data.to_csv('raw_participants_data_with_heartrate_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "827bfcc8-7de7-4778-98b9-08a0ce4e182f",
+   "metadata": {},
+   "source": [
+    "# Part 2: Preprocessing the survey data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "52014692-1946-45f1-bda2-b771903aaf40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = pd.read_csv('survey_responses/Enquete A OIS.csv', index_col=0)\n",
+    "B = pd.read_csv('survey_responses/Enquete B OIS.csv', index_col=0)\n",
+    "participants_data_with_heartrate = pd.read_csv('raw_participants_data_with_heartrate_data.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9cc428d0-b771-4b1e-9208-3bf92fdf636d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary to pair final csv file (key) with survey responses (value)\n",
+    "pairing_dict= {\n",
+    "    'Age': 'Age',\n",
+    "    'Gender': 'Wat is uw gender?',\n",
+    "    'VR_know_how': 'In hoeverre zou u uw kennis van VR omschrijven?',\n",
+    "    'VR_headset_experience': 'Heeft u al eens eerder een VR bril gebruikt',\n",
+    "    \n",
+    "    'b_Item_1_C': 'Mijn ademhaling is sneller dan normaal',\n",
+    "    'b_Item_2_C': 'Mijn hartslag is hoger dan normaal',\n",
+    "    'b_Item_3_M': 'Mijn spieren voelen gespannen (gesloten vuisten, strakke kaak/wenkbrauwen etc.)',\n",
+    "    'b_Item_4_M': 'Mijn spieren voelen relaxed',\n",
+    "    'b_Item_5_M': 'Mijn spieren voelen losjes',\n",
+    "    'b_Item_6_G': 'Ik voel mij relaxed',\n",
+    "    'b_Item_7_G': 'Op het moment, ben ik volkomen kalm',\n",
+    "    'b_Item_8_S': 'Ik voel mij slaperig en/of moe',\n",
+    "    'b_Item_9_S': 'Ik sta op het punt om in slaap te vallen',\n",
+    "    'b_Item_10_S': 'Ik voel mij verfrist en wakker',\n",
+    "    \n",
+    "    'a_Item_1_C': 'Mijn ademhaling is sneller dan normaal.1',\n",
+    "    'a_Item_2_C': 'Mijn hartslag is hoger dan normaal.1',\n",
+    "    'a_Item_3_M': 'Mijn spieren voelen gespannen (gesloten vuisten, strakke kaak/wenkbrauwen etc.).1',\n",
+    "    'a_Item_4_M': 'Mijn spieren voelen relaxed.1',\n",
+    "    'a_Item_5_M': 'Mijn spieren voelen losjes.1',\n",
+    "    'a_Item_6_G': 'Ik voel mij relaxed.1',\n",
+    "    'a_Item_7_G': 'Op het moment, ben ik volkomen kalm.1',\n",
+    "    'a_Item_8_S': 'Ik voel mij slaperig en/of moe.1',\n",
+    "    'a_Item_9_S': 'Ik sta op het punt om in slaap te vallen.1',\n",
+    "    'a_Item_10_S': 'Ik voel mij verfrist en wakker.1'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "29968a92-c735-478f-8413-b707f191735f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_39727/3451536650.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Nee' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  participants_data_final.at[id, final] = A[current][A['ID'] == id].iloc[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initiate a finale to be exported dataframe\n",
+    "participants_data_final = participants_data_with_heartrate\n",
+    "\n",
+    "# loop to write all the data to the final dataframe\n",
+    "for id in [x for x in range(1, 38) if x != 14]:\n",
+    "    for final, current in pairing_dict.items():\n",
+    "        # participant 14 had no survey data\n",
+    "        if id==14:\n",
+    "            pass\n",
+    "        try:\n",
+    "            # Attempt to retrieve data from DataFrame A\n",
+    "            participants_data_final.at[id, final] = A[current][A['ID'] == id].iloc[0]\n",
+    "        except IndexError:\n",
+    "            try:\n",
+    "                # If not found in DataFrame A, attempt to retrieve data from DataFrame B\n",
+    "                participants_data_final.at[id, final] = B[current][B['ID'] == id].iloc[0]\n",
+    "            except IndexError:\n",
+    "                # If not found in both DataFrames, you may want to handle this case appropriately\n",
+    "                participants_data_final.at[id, final] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c97fa896-cf44-4ee2-9d66-3362163a1aec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Processing the Gender, and VR_headset_experience column to correct datatypes\n",
+    "participants_data_final.loc[participants_data_final[\"Gender\"] == \"Man\", \"Gender\"] = 'M'\n",
+    "participants_data_final.loc[participants_data_final[\"Gender\"] == \"Vrouw\", \"Gender\"] = 'V'\n",
+    "participants_data_final.loc[participants_data_final[\"VR_headset_experience\"] == \"Nee\", \"VR_headset_experience\"] = '0'\n",
+    "participants_data_final.loc[participants_data_final[\"VR_headset_experience\"] == \"Ja\", \"VR_headset_experience\"] = '1'\n",
+    "participants_data_final.loc[participants_data_final[\"VR_headset_experience\"] == \"Weet ik niet\", \"VR_headset_experience\"] = '0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bc336dba-1945-448e-9d6a-873c7b9ed6ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# participants_data_final.to_csv('participants_data_final.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a753161e-b8ee-458e-9b9b-f2a9e09bb82d",
+   "id": "ceb77873-70ea-435b-ab30-ae69685d31f9",
    "metadata": {},
    "outputs": [],
    "source": []
